--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="countdown">
         <h1>A new dimension is about to open...</h1>
                
-        <p>Are you ready Adventureres of Suisei?</p>
+        <p>Are you ready Adventurers of Suisei?</p>
         <a href="https://twitter.com/ProjectSuisei" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Community</span>
         </a>
